Drivers Totem/Setup_BK-C310(Normal)_EN V2.0/KIOSKDLL V1.17/KIOSKDLLDemo Souce/KIOSKDLLDEMO_VB/KIOSKDLLFuncs.bas

Attribute VB_Name = "Module1"
'Public Declare Function EnumPrinters Lib "winspool.drv" Alias "EnumPrintersA" (ByVal flags As Long, name As String, ByVal Level As Long, pPrinterEnum As Byte, ByVal cdBuf As Long, pcbNeeded As Long, pcReturned As Long) As Long
Public Declare Function EnumPrinters Lib "winspool.drv" Alias "EnumPrintersA" (ByVal flags As Long, ByVal name As String, ByVal Level As Long, pPrinterEnum As Long, ByVal cdBuf As Long, pcbNeeded As Long, pcReturned As Long) As Long
Public Declare Sub Sleep Lib "kernel32" (ByVal dwMilliseconds As Long)
Public Declare Function StrToIntEx Lib "Shlwapi.dll" Alias "StrToIntExW" (ByVal pszString As String, ByVal Flag As Long, ByVal piRet As Long) As Boolean
Public Declare Function FindWindow Lib "user32" Alias "FindWindowA" (ByVal lpClassName As String, ByVal lpWindowName As String) As Long
Public Declare Function ShellExecute Lib "shell32.dll" Alias "ShellExecuteA" (ByVal hwnd As Long, ByVal lpOperation As String, ByVal lpFile As String, ByVal lpParameters As String, ByVal lpDirectory As String, ByVal nShowCmd As Long) As Long
Public Declare Function BringWindowToTop Lib "user32" (ByVal hwnd As Long) As Long
Public Declare Function OpenIcon Lib "user32" (ByVal hwnd As Long) As Long

Public Declare Function lstrcpy Lib "kernel32.dll" Alias "lstrcpyA" (ByVal lpString1 As String, ByVal lpString2 As Long) As Long
Public Declare Function lstrlen Lib "kernel32.dll" Alias "lstrlenA" (ByVal lpString As Long) As Long

Public Type DEVMODE
        dmDeviceName As String * 32
        dmSpecVersion As Integer
        dmDriverVersion As Integer
        dmSize As Integer
        dmDriverExtra As Integer
        dmFields As Long
        dmOrientation As Integer
        dmPaperSize As Integer
        dmPaperLength As Integer
        dmPaperWidth As Integer
        dmScale As Integer
        dmCopies As Integer
        dmDefaultSource As Integer
        dmPrintQuality As Integer
        dmColor As Integer
        dmDuplex As Integer
        dmYResolution As Integer
        dmTTOption As Integer
        dmCollate As Integer
        dmFormName As String * 32
        dmUnusedPadding As Integer
        dmBitsPerPel As Long
        dmPelsWidth As Long
        dmPelsHeight As Long
        dmDisplayFlags As Long
        dmDisplayFrequency As Long
End Type

Public Type ACL
        AclRevision As Byte
        Sbz1 As Byte
        AclSize As Integer
        AceCount As Integer
        Sbz2 As Integer
End Type

Public Type SECURITY_DESCRIPTOR
        Revision As Byte
        Sbz1 As Byte
        Control As Long
        Owner As Long
        Group As Long
        Sacl As ACL
        Dacl As ACL
End Type

Public Type PRINTER_INFO_2
        pServerName As String
        pPrinterName As String
        pShareName As String
        pPortName As String
        pDriverName As String
        pComment As String
        pLocation As String
        pDevMode As DEVMODE
        pSepFile As String
        pPrintProcessor As String
        pDatatype As String
        pParameters As String
        pSecurityDescriptor As SECURITY_DESCRIPTOR
        Attributes As Long
        Priority As Long
        DefaultPriority As Long
        StartTime As Long
        UntilTime As Long
        Status As Long
        cJobs As Long
        AveragePPM As Long
End Type

Public Declare Sub CopyMemory Lib "kernel32" Alias "RtlMoveMemory" (hpvDest As Any, hpvSource As Any, ByVal cbCopy As Long)
Public Declare Sub FillMemory Lib "kernel32" Alias "RtlFillMemory" (hpvDest As Any, ByVal Length As Long, ByVal Fill As Byte)


'Open the serial port.
Public Declare Function KIOSK_OpenCom Lib "KIOSKDLL.dll" (ByVal lpName As String, ByVal nComBaudrate As Long, ByVal nComDataBits As Long, ByVal nComStopBits As Long, ByVal nComParity As Long, ByVal nFlowControl As Long) As Long

'Close the serial port.
Public Declare Function KIOSK_CloseCom Lib "KIOSKDLL.dll" (ByVal hPort As Long) As Long

'Open the LPT port.
Public Declare Function KIOSK_OpenLptByDrv Lib "KIOSKDLL.dll" (ByVal LPTAddress As Long) As Long

'Close the LPT port.
Public Declare Function KIOSK_CloseDrvLPT Lib "KIOSKDLL.dll" (ByVal nPortType As Long) As Long

'Open the USB port.
Public Declare Function KIOSK_OpenUsb Lib "KIOSKDLL.dll" () As Long

'Open the USB port by ID.
Public Declare Function KIOSK_OpenUsbByID Lib "KIOSKDLL.dll" (ByVal nID As Long) As Long

'Close the USB port.
Public Declare Function KIOSK_CloseUsb Lib "KIOSKDLL.dll" (ByVal hPort As Long) As Long

'Open the driver port.
Public Declare Function KIOSK_OpenDrv Lib "KIOSKDLL.dll" (ByVal drivername As String) As Long

'Close the driver port.
Public Declare Function KIOSK_CloseDrv Lib "KIOSKDLL.dll" (ByVal hPort As Long) As Long

'Start a document.
Public Declare Function KIOSK_StartDoc Lib "KIOSKDLL.dll" (ByVal hPort As Long) As Long

'End a document which is started.
Public Declare Function KIOSK_EndDoc Lib "KIOSKDLL.dll" (ByVal hPort As Long) As Integer

'Set the timeouts of serial port.
Public Declare Function KIOSK_SetComTimeOuts Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nWriteTimeoutMul As Long, ByVal nWriteTimeoutCon As Long, ByVal nReadTimeoutMul As Long, ByVal nReadTimeoutCon As Long) As Integer

'Set the timeouts of USB port.
Public Declare Function KIOSK_SetUsbTimeOuts Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal wReadTimeouts As Long, ByVal wWriteTimeouts As Long) As Integer

'Send data to port or file.
Public Declare Function KIOSK_WriteData Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nBytesToWrite As Integer) As Integer

'Read data from port or file.
Public Declare Function KIOSK_ReadData Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nStatus As Integer, ByVal pszBuffer As Long, ByVal nBytesToRead As Integer) As Long

'/*Function functions.*/
'Send file to print.
Public Declare Function KIOSK_SendFile Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal filename As String) As Integer

'Begin to save the data to file from now on.
Public Declare Function KIOSK_BeginSaveToFile Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal lpFileName As String, ByVal bToPrByValer As Boolean) As Integer

'Stop saving the data to file from now on.
Public Declare Function KIOSK_EndSaveToFile Lib "KIOSKDLL.dll" (ByVal hPort As Long) As Integer

'Query the status of printer.
Public Declare Function KIOSK_QueryStatus Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal pszStatus As Byte, ByVal nTimeouts As Long) As Integer

'Query the real-time status of printer.
Public Declare Function KIOSK_RTQueryStatus Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, pszStatus As Byte) As Long

Public Declare Function KIOSK_RTQueryStatusForT681 Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, pszStatus As Byte) As Long

'Automatic Status Back.
Public Declare Function KIOSK_QueryASB Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal bAutoReturn As Integer) As Integer

'Get the version of KIOSKDLL.
Public Declare Function KIOSK_GetVersionInfo Lib "KIOSKDLL.dll" () As Integer

'Stat or stop the macro definition.
Public Declare Function KIOSK_EnableMacro Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer) As Integer

'Reset the printer.
Public Declare Function KIOSK_Reset Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer) As Integer

'Set the mode of paper.
Public Declare Function KIOSK_SetPaperMode Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nMode As Integer) As Integer

'Set the mode of printing.
Public Declare Function KIOSK_SetMode Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nPrByValMode As Integer) As Integer

'Set tht units of motion.
Public Declare Function KIOSK_SetMotionUnit Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nHorizontalMU As Integer, ByVal nVerticalMU As Integer) As Integer

'Set the spacing of lines.
Public Declare Function KIOSK_SetLineSpacing Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nDistance As Integer) As Integer

'Set the right spacing of character.
Public Declare Function KIOSK_SetRightSpacing Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nDistance As Integer) As Integer

'Set the opposite positon.
Public Declare Function KIOSK_SetOppositePosition Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nPrByValMode As Integer, ByVal nHorizontalDist As Integer, ByVal nVerticalDist As Integer) As Integer

'Set the positon of tabs.
Public Declare Function KIOSK_SetTabs Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, pszPosition As String, ByVal nCount As Integer) As Integer

'Execute tabs.
Public Declare Function KIOSK_ExecuteTabs Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer) As Integer

'Pre-download one bit map to RAM by specifying it's ID.
Public Declare Function KIOSK_PreDownloadBmpToRAM Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal pszPaths As String, ByVal nTranslateMode As Integer, ByVal nID As Integer) As Integer

'Pre-download a group of bit map to Flash by specifying it's ID.
Public Declare Function KIOSK_PreDownloadBmpToFlash Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, pszPaths As String, ByVal nTranslateMode As Integer, ByVal nCount As Integer) As Long

'Select an international character and character code page/table.
Public Declare Function KIOSK_SetCharSetAndCodePage Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nCharSet As Integer, ByVal nCodePage As Integer) As Integer
 
 'User-defined character.
Public Declare Function KIOSK_FontUDChar Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nEnable As Integer, ByVal nCharCode As Integer, pCharBmpBuffer As String, ByVal nDotsOfWidth As Integer, ByVal nBytesOfHeight As Integer) As Integer

'Feed one line.
Public Declare Function KIOSK_FeedLine Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer) As Integer

'Feed paper forward.
Public Declare Function KIOSK_FeedLines Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nLines As Integer) As Integer

'Feed lines in the marker paper mode.
Public Declare Function KIOSK_MarkerFeedPaper Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer) As Integer
 
'Cut paper.
Public Declare Function KIOSK_CutPaper Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nMode As Integer, ByVal nDistance As Integer) As Integer

'Cut paper in the marker paper mode.
Public Declare Function KIOSK_MarkerCutPaper Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nDistance As Integer) As Integer

'Set the width of printing area.
Public Declare Function KIOSK_S_SetLeftMarginAndAreaWidth Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nDistance As Integer, ByVal nWidth As Integer) As Integer

'Set the aligned mode.
Public Declare Function KIOSK_S_SetAlignMode Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal nMode As Integer) As Integer

'Write one character string at the specified position.
Public Declare Function KIOSK_S_Textout Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal pszData As String, ByVal nOrgx As Integer, ByVal nWidthTimes As Integer, ByVal nHeightTimes As Integer, ByVal nFontType As Integer, ByVal nFontStyle As Integer) As Integer

'Download a bit map and print it immediately at the specified position.
Public Declare Function KIOSK_S_DownloadPrintBmp Lib "KIOSKDLL.dll" (ByVal hPort As Long, ByVal nPortType As Integer, ByVal pszPath As String, ByVal nTranslateMode As Integer, ByVal nOrgx As Integer, ByVal nMode As Integer) As Integer
